- Fixed bug #54624 (class_alias and type hint)